# anoma-local-domain

./: .gitignore  Cargo.toml  README.md  checksum-Elixir.AnomaSDK.Arm.Test.exs  config.exs  mix.exs  runtime.exs
anoma_indexer_web/: .env.template  .gitignore  README.md  mix.exs
anoma_indexer_web/lib/indexer_web/: application.ex  router.ex
anoma_indexer_web/scripts/: get_tags_for_key.sh  post_key.sh
anoma_indexer_web/test/: indexer_web_test.exs
example_local_domain_app/: .gitignore  README.md  mix.exs
example_local_domain_app/lib/examples/: e_factory.ex
lib/: local_domain.ex
lib/examples/: e_action.ex  e_fixed_supply.ex  e_local_domain.ex  e_merkle_tree.ex  e_node.ex  e_poller.ex  e_resource.ex  e_scheme.ex  e_storage.ex  e_transpile.ex
lib/examples/example_local_domain_app/: README.md  mix.exs
lib/local_domain/: application.ex  application_startup.ex  arm_bindings.ex  def_scry.ex  keypair.ex  node_supervisor.ex  otp_application.ex  registry.ex  sample_application.ex  scry.ex  storage.ex  views.ex
lib/local_domain/scheme/: scheme.ex  scheme_registry.ex  std.ex
lib/local_domain/scry/: handler_registry.ex
lib/local_domain/structures/: action.ex  batch_merkle_tree.ex  env.ex  fixed_supply.ex  fixed_supply_intent.ex  merkle_tree.ex  merkle_tree_batch.ex  resource.ex  scheme.ex  transpile.ex
native/arm_bindings/: Cargo.toml
native/arm_bindings/src/: lib.rs
test/: action_test.exs  fixed_supply_test.exs  local_domain_test.exs  merkle_test.exs  node_test.exs  poller_test.exs  resource_test.exs  scheme_test.exs  storage_test.exs  transpile_test.exs
(+12 files in other folders)
