[package]
name = "arm_bindings"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "arm_bindings"
crate-type = ["cdylib"]

[dependencies]
arm = { git = "https://github.com/anoma/arm-risc0", tag = "v0.8.1", default-features = true, features = []}

rustler = "0.36.2"
serde = { version = "1.0.197", default-features = false }
serde_json = "1.0"
k256 = { version = "=0.13.3", features = [
    "arithmetic",
    "serde",
    "expose-field",
    "std",
    "ecdsa",
    "hash2curve",
], default-features = false }
rand = "0.8"
hex = "0.4.3"
bincode = "1.3.3"

